# sparkles

./: .gitignore  README.md  find_closest_camwfs_dark.py  pyproject.toml  setup.py  test_PCA_pipe.ipynb
calibrator/: calibrate_grid.py
code/: spark_plots.py  sprkls_pool.py
dev/: PCA_basis_stats.ipynb  PCA_basis_test.ipynb  PCA_plotting.py  log_read_demo.ipynb  merge_spk_tsci.csv  selfRM_DIMM_modes.ipynb  selfRMs_ao4elt.ipynb  self_RMs.ipynb  spark_GS_normed_Test.ipynb  spark_vs_modes.ipynb  spark_xrif_test.ipynb  sparkles_2022B.ipynb  sparkles_2023A.ipynb  sparkles_2023A_selfRM.ipynb  sparkles_2024A_selfRM.ipynb  sparkles_LAB_2023B.ipynb  sparkles_lab2023B_sync.ipynb  sync_phot_avg.npy  test_PCA_pipe.ipynb  unsync_phot_avg.npy
notebooks/: spark_25A_tests.ipynb  spark_25B_tests.ipynb  test_PCA_spark.ipynb
phot_tests/: LAB_2024B_photometry.ipynb  sync_phot_sum.npy  unsync_phot_sum.npy
sim/: err_budget.py  err_budget_example.csv  fitting_error.ipynb  gen_sparkle_rewrite.py  jareds_way.ipynb  sim_PSD.ipynb  sim_hcipy_sparkles.ipynb  sim_sparkle.py  sim_tests.ipynb  turb_LCO_sims.ipynb  turb_sims.py  unmod_pfs_LCO.ipynb  unmod_pwfs.ipynb  unmodulated_pwfs.ipynb
sparkles/: Spark.py  camwfs_dark.py  file_reader.py  log_readers.py  pca.py  pca_pipeline.py  pipeline.py  spark.py  spark_calibrate.py  spark_lab.py  spark_plots.py  spark_tar.py  spark_xrif.py  spark_xrif_pca.py  sparkles.py  sprkles_pool_chunk.py
telem/: OG_telem_PLOTS.ipynb  OG_vs_telem.ipynb  OG_with_telem.csv  df_paper.csv  log_read_demo.ipynb  mag_list_selfRM_23A.csv  mag_list_selfRM_23A_try2.csv  (+4 more)
(+41 files in other folders)
