[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sparkles"
dynamic = ["version"]
description = "Tools for sparkle-based optical gain calibration and processing."
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = []

[project.urls]
"Bug Reports" = "https://github.com/edenacadia/sparkles/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sparkles*"]
namespaces = true

[tool.setuptools.dynamic]
version = {file = ["src/VERSION"]}
